Refactor: Service와 Validation 분리