@@ -5,9 +5,9 @@ import ktb.week4.community.domain.article.dto.GetArticlesResponseDto;
 import ktb.week4.community.domain.article.entity.Article;
 import ktb.week4.community.domain.article.repository.ArticleRepository;
 import ktb.week4.community.domain.user.entity.User;
+import ktb.week4.community.domain.article.loader.ArticleLoader;
+import ktb.week4.community.domain.user.loader.UserLoader;
 import ktb.week4.community.domain.user.repository.UserRepository;
-import ktb.week4.community.global.apiPayload.ErrorCode;
-import ktb.week4.community.global.exception.GeneralException;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -20,19 +20,21 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class ArticleQueryService {
     private final ArticleRepository articleRepository;
-    private final UserRepository userRepository;
+	private final UserRepository userRepository;
+	private final UserLoader userLoader;
+	private final ArticleLoader articleLoader;
 
     public GetArticlesResponseDto getArticles(int page, int size) {
         List<Article> articles = articleRepository.findAll(page, size);
         List<Long> userIds = articles.stream()
                 .map(Article::getUserId)
                 .distinct()
-                .collect(Collectors.toList());
-
-        Map<Long, User> userMap = userRepository.findByIds(userIds).stream()
-                .collect(Collectors.toMap(User::getId, Function.identity()));
-
-        List<ArticleResponseDto> responses = articles.stream()
+                .toList();
+		
+		Map<Long, User> userMap = userRepository.findByIds(userIds).stream()
+				.collect(Collectors.toMap(User::getId, Function.identity()));
+		
+		List<ArticleResponseDto> responses = articles.stream()
                 .map(article -> {
                     User user = userMap.get(article.getUserId());
                     return ArticleResponseDto.fromEntity(article, user);
@@ -47,10 +49,10 @@ public class ArticleQueryService {
     }
 
     public ArticleResponseDto getArticle(Long articleId) {
-        Article article = articleRepository.findById(articleId)
-                .orElseThrow(() -> new GeneralException(ErrorCode.ARTICLE_NOT_FOUND));
-        User user = userRepository.findById(article.getUserId())
-                .orElseThrow(() -> new GeneralException(ErrorCode.USER_NOT_FOUND));
+        Article article = articleLoader.getArticleById(articleId);
+        User user = userLoader.getUserById(article.getUserId());
+		
+		articleRepository.increaseViewCount(article);
         return ArticleResponseDto.fromEntity(article, user);
     }
 }
